--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,28 +1,48 @@
-$greyColor: rgb(100, 100, 100);
-
-html {
-    font-family: robotoReg;
-    color: $greyColor;
-}
-
 .wrapper {
-    width: 1200px;
-    height: 100%;
     margin: 0 auto;
+    width: 1000px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid rgb(255, 0, 0);
+}
+.upperText {
+    font-size: 30px;
+    text-align: center;
+    padding: 5px;
+    border: 1px solid black;
+}
+.section {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    width: 100%;
+}
+.menuBox {
+    width: 30%;
+    height: 100%;
     border: 1px solid black;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
+    gap: 10px;
+    padding: 20px;
 }
-
-.imgBox {
-    width: 500px;
-    height: 500px;
+.contentBox {
+    width: 70%;
+    height: 100%;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
 }
-
-.text {
-    font-size: 50px;
+.source {
+    border: 1px solid green;
+    text-align: center;
 }
-
+.newsBox {
+    border: 1px solid green;
+    text-align: center;
+}
