feat: divided app view controller

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,4 @@
 //сюда подключаются все модули стилей
-@use 'nullstyle';
-@use 'fonts';
-@use 'global';
-
+@use "nullstyle";
+@use "fonts";
+@use "global";
