--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,6 @@
 .wrapper {
     margin: 0 auto;
-    width: 1000px;
-    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -21,7 +20,7 @@
     width: 100%;
 }
 .menuBox {
-    width: 30%;
+    width: 20%;
     height: 100%;
     border: 1px solid black;
     display: flex;
@@ -30,7 +29,7 @@
     padding: 20px;
 }
 .contentBox {
-    width: 70%;
+    width: 80%;
     height: 100%;
     border: 1px solid black;
     display: flex;
@@ -45,4 +44,31 @@
 .newsBox {
     border: 1px solid green;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+.imgBox {
+    height: 250px;
+    width: 30%;
+    border: 1px solid red;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.textBox {
+    width: 70%;
+    border: 1px solid green;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.title {
+    font-size: 30px;
+    font-family: "robotoReg";
+}
+.lastRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
