--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,7 +8,6 @@ body {
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-    border: 1px solid rgb(255, 0, 0);
 }
 .upperText {
     font-size: 50px;
@@ -82,10 +81,15 @@ body {
     font-size: 20px;
     color: white;
     font-family: "robotoReg";
+    text-align: left;
 }
 .lastRow {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     color: white;
+}
+
+.active {
+    border-color: green;
 }
