--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,6 @@
 body {
     background-color: black;
+    overflow-x: hidden;
 }
 .wrapper {
     margin: 0 auto;
@@ -9,67 +10,140 @@ body {
     justify-content: space-around;
     align-items: center;
 }
-.upperText {
-    font-size: 50px;
-    text-align: center;
-    padding: 10px;
-    color: white;
-}
 .section {
     display: flex;
     flex-direction: row;
-    height: 100%;
     width: 100%;
 }
 .menuBox {
-    width: 20%;
-    height: 100%;
-    border: 1px solid black;
+    width: 250px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    padding: 20px;
+    gap: 2px;
+    padding: 10px;
+    transition: left linear 300ms;
+    @media (max-width: 1023px) {
+        position: absolute;
+        top: 60px;
+        left: -100%;
+        width: 100%;
+        background-color: black;
+        z-index: 10;
+    }
 }
-.contentBox {
-    width: 80%;
-    height: 100%;
-    border: 1px solid black;
+.visible {
     display: flex;
-    flex-direction: column;
-    gap: 10px;
-    padding: 20px;
+    left: 0px;
 }
 .sourceBTN {
-    border: 3px solid rgb(68, 106, 255);
+    border: 2px solid rgb(56, 56, 198);
     border-radius: 10px;
     color: rgb(255, 255, 255);
     background-color: black;
     text-align: center;
-    font-size: 18px;
+    font-size: 16px;
+    padding: 3px;
+    &:hover {
+        border-color: green;
+    }
+}
+.active {
+    background-color: rgb(0, 80, 0);
+}
+.bodyBox {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10px;
+}
+.upperLine {
+    font-size: 45px;
+    text-align: center;
     padding: 5px;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    align-items: center;
+    text-shadow: -2px -1px rgb(56, 56, 198);
+}
+.burgerBTN {
+    height: 30px;
+    width: 40px;
+    background-color: rgb(0, 0, 0);
+    flex-direction: column;
+    gap: 7px;
+    display: none;
+    @media (max-width: 1023px) {
+        display: flex;
+    }
+}
+.burgerLine {
+    height: 5px;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+}
+.upperText {
+    width: 100%;
+    height: 50px;
+    font-size: 40px;
+    text-align: center;
+    padding: 5px;
+    color: white;
+    animation-name: logo-txt;
+    animation-duration: 2s;
+    @keyframes logo-txt {
+        from {
+            font-size: 1px;
+        }
+        to {
+            font-size: 40px;
+        }
+    }
+}
+.contentBox {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    color: green;
+    text-align: center;
+    font-size: 50px;
 }
 .newsBox {
     border: 1px solid green;
     text-align: center;
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    align-items: center;
+    @media (max-width: 767px) {
+        flex-direction: column;
+    }
 }
 .imgBox {
     height: 250px;
     width: 30%;
-    border: 1px solid red;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    @media (max-width: 767px) {
+        width: 100%;
+    }
 }
 .textBox {
     width: 70%;
-    border: 1px solid green;
+    min-height: 250px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 20px;
+    padding: 25px;
+    gap: 10px;
+    @media (max-width: 767px) {
+        width: 100%;
+    }
 }
 .title {
     font-size: 30px;
@@ -78,7 +152,8 @@ body {
     padding: 10px;
 }
 .description {
-    font-size: 20px;
+    font-size: 16px;
+    line-height: 25px;
     color: white;
     font-family: "robotoReg";
     text-align: left;
@@ -88,8 +163,6 @@ body {
     flex-direction: row;
     justify-content: space-between;
     color: white;
-}
-
-.active {
-    border-color: green;
+    gap: 20px;
+    font-size: 15px;
 }
